tests/fail/semantics/extra_annotation_parameter/main.kira
annotation State {
}

construct Widget {
    annotations {
        @State;
    }
}

Widget Button() {
    @State(1)
    let isPressed: Bool = false;

    content {
    }
}

@Main
function entry() {
    return;
}
